Attempt at fixing overflow issues

--- a/style.css
+++ b/style.css
@@ -36,13 +36,18 @@
   }
 }
 
+html {
+  min-height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 main {
   min-height: 100%;
   padding-bottom: 2.5rem;
 }
 
 body {
-  overflow-x: hidden;
   background-color: var(--bg-lighter);
 
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
